<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/instruction"/>

    <Button
        android:id="@+id/jobInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jobInformation" />

    <ImageView
        android:id="@+id/gitHubImageView"
        android:layout_width="192dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/github"
        android:layout_gravity="center_horizontal"/>

    <ProgressBar
        android:id="@+id/IntroProgressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:visibility="invisible"/>

</LinearLayout>